--- a/homePage.css
+++ b/homePage.css
@@ -16,6 +16,7 @@ body {
     justify-content: center;
 }
 
+
 header {
     position: relative;
     width: 80%;
@@ -41,7 +42,7 @@ header::after {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(100deg, transparent, black);
+    background: linear-gradient(180deg, transparent, black);
     z-index: -1;
 }
 
@@ -169,17 +170,7 @@ header nav .search_user .search .card{
     margin-bottom: 5px;
     padding: 3px 0px;
     text-decoration: none ;
-}
-
-header nav .search_user .search .card{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-    padding: 3px 0px;
-    text-decoration: none ;
+    display: none;
 }
 
 header nav .search_user .search .card::before {
@@ -225,4 +216,257 @@ header nav .search_user .search .card .cont span{
     padding: 0px 3px;
     margin: 0px 5px 0px 10px;
     font-weight: 500;
+}
+
+header .content{
+    position: relative;
+    color: white;
+    margin-top: 50px;
+    padding-left: 50px;
+}
+
+header .content h1{
+    font-size: 50px;
+}
+
+header .content p{
+    font-size: 11px;
+    width: 350px;
+    word-break: break-all;
+}
+
+header .content .details{
+   display: flex;
+   align-items: center;
+   margin-top: 10px;
+}
+
+header .content .details h6{
+    color: rgb(255, 255, 255, .8);
+    font-size: 10px;
+    margin-right: 10px;
+}
+
+header .content .details h5{
+    color: rgb(142, 230, 48);
+    font-size: 10px;
+    margin-right: 10px;
+}
+
+header .content .details h4{
+    color: white;
+    font-size: 10px;
+    margin-right: 10px;
+}
+
+header .content .details h3{
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+}
+
+header .content .details h3 span{
+    background-color: yellow;
+    color: black;
+    padding: 0px 3px;
+    margin: 0px 5px 0px 10px;
+    font-weight: 500;
+}
+
+header .content .btns{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+header .content .btns a{
+    padding: 8px 12px;
+    font-size: 15px;
+    font-weight: 600;
+    background: linear-gradient(90deg, #00bdff, #0079ff);
+    border-radius: 5px;
+    color: white;
+    margin-left: 10px;
+    text-decoration: none;
+    animation: button 1s linear infinite;
+}
+
+@keyframes button{
+    0%{
+        background: linear-gradient(0deg, #00bdff, #0079ff);
+    }
+    12%{
+        background: linear-gradient(45deg, #00bdff, #0079ff);
+    }
+    24%{
+        background: linear-gradient(95deg, #00bdff, #0079ff);
+    }
+    36%{
+        background: linear-gradient(145deg, #00bdff, #0079ff);
+    }
+    48%{
+        background: linear-gradient(195deg, #00bdff, #0079ff);
+    }
+    60%{
+        background: linear-gradient(245deg, #00bdff, #0079ff);
+    }
+    72%{
+        background: linear-gradient(295deg, #00bdff, #0079ff);
+    }
+    100%{
+        background: linear-gradient(360deg, #00bdff, #0079ff);
+    }
+}
+
+header section{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    padding: 8px 50px;
+    bottom: 20px;
+    color: white;
+}
+
+header section .cards{
+    position: relative;
+    width: 100%;
+    height: 200px;
+    /*border: 1px solid white;*/
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
+
+header section .cards::-webkit-scrollbar{
+    display: none;
+}
+
+header section .cards .card{ 
+    position: relative;
+    min-width: 200px;
+    height: 180px;
+    /*border: 1px solid white;*/
+    border-radius: 8px;
+    margin-right: 10px;
+    background: black;
+    transition: .3s linear;
+}
+
+header section .cards .card .poster{ 
+   width: 100%;
+   height: 100%;
+   border-radius: 8px;
+   position: relative;
+}
+
+header section .cards .card:hover { 
+    min-width: 300px;
+    overflow: hidden;
+}
+
+header section .cards .card .rest_card { 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    left: 0;
+    top: 0;
+    z-index: 999999;
+    opacity: 0;
+    transition: 1s linear;
+}
+
+header section .cards .card .rest_card img{ 
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    z-index: -1;
+}
+
+header section .cards .card .rest_card::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, black);
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+header section .cards .card .rest_card .cont {
+    position: absolute;
+    width: 100%;
+    bottom: 10px;
+    left: 0;
+    color: white;
+    padding: 0px 20px;
+}
+
+header section .cards .card .rest_card .cont .sub {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header section .cards .card .rest_card .cont .sub p{
+    font-size: 12px;
+    font-weight: 400;
+    color: rgb(255, 255, 255, .7);
+}
+
+header section .cards .card .rest_card .cont .sub h3{
+    color: white;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+}
+
+header section .cards .card .rest_card .cont .sub h3 span{
+    background: yellow;
+    color: black;
+    padding: 0px 3px;
+    margin: 0px 5px 0px 10px;
+    font-weight: 500;
+    border-radius: 2px;
+}
+
+header section .cards .card:hover .rest_card{
+    opacity: 1;
+}
+
+header section .bi-chevron-left, .bi-chevron-right {
+    position: absolute;
+    top: 50%;
+    left: 3%;
+    width: 25px;
+    height: 25px;
+    background: rgb(255, 255, 255, .3);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-size: 12px;
+    cursor: pointer;
+    transition: .3s linear;
+    z-index: 999999999999;
+    opacity: 0;
+}
+
+header section .bi-chevron-right {
+    left: unset;
+    right: 3%;
+}
+
+header section:hover .bi-chevron-right {
+    opacity: 1;
+}
+
+header section:hover .bi-chevron-left {
+    opacity: 1;
 }
